--- a/comicbin/app/views/comics/new.html.erb
+++ b/comicbin/app/views/comics/new.html.erb
@@ -3,7 +3,9 @@
 </div>
 
 <div class='row'>
-  <!-- RENDER THE FORM PARTIAL HERE. -->
+	<div class="col-md-6">
+		<%=render "form" %>
+	</div>
 </div>
 
 <div class='container'>
