--- a/comicbin/app/views/comics/_form.html.erb
+++ b/comicbin/app/views/comics/_form.html.erb
@@ -1,7 +1,7 @@
 <div class='col-lg-6'>
   <div class='well'>
 
-  <!-- WRITE THE CORRECT FORM HEADER AND BLOCK USING ERB -->
+  <form action="/comics/create" method="get">
     <% if @comic.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@comic.errors.count, "error") %> prohibited this comic from being saved:</h2>
@@ -15,21 +15,20 @@
     <% end %>
 
     <div class="form-group">
-      <!-- DISPLAY A TITLE LABEL -->
-      <!-- DISPLAY A TEXT FIELD AND ATTACH THE CLASS OF 'form-control' TO THIS FIELD -->
+      <label for="title">Comic Title:</label>
+      <input type="text" name="title" class="form-control" id="title" placeholder="Enter comic title here">
     </div>
     <div class="form-group">
-      <!-- DISPLAY A DESCRIPTION LABEL -->
-      <!-- DISPLAY A TEXT FIELD AND ATTACH THE CLASS OF 'form-control' TO THIS FIELD -->
+      <label for="description">Description:</label>
+      <input type="text" name="description" class="form-control" id="description" placeholder="Enter description here">
     </div>
     <div class="form-group">
-      <!-- DISPLAY AN IMAGE LABEL -->
-      <!-- DISPLAY A TEXT FIELD ATTACH THE CLASS OF 'form-control' TO THIS FIELD -->
+      <label for="image">image URL:</label>
+      <input type="text" name="image" class="form-control" id="image" placeholder="Enter URL to a image poster image">
     </div>
     <div class="actions">
-      <!-- DISPLAY A SUBMIT BUTTON WITH A CLASS OF 'btn btn-primary' -->
+      <button type="submit" class="btn btn-default">Submit</button>
     </div>
-
-  <% end %>
+  </form>
   </div>
 </div>
